RESOLVED FIXED286388
Have ""_span be `constexpr` and return a `std::span<const char>` instead of `std::span<const LChar>`
https://bugs.webkit.org/show_bug.cgi?id=286388
Summary Have ""_span be `constexpr` and return a `std::span<const char>` instead of `...
Chris Dumez
Reported 2025-01-22 16:20:19 PST
Have ""_span be `constexpr` and return a `std::span<const char>` instead of `std::span<const LChar>`. One can still get a `std::span<const LChar>` by using ""_span8. One big benefit of ""_span is that it can be used to initialize constexpr variable since it doesn't require converting into LChar.
Attachments
Chris Dumez
Comment 1 2025-01-22 16:26:25 PST
EWS
Comment 2 2025-01-23 07:40:51 PST
Committed 289290@main (df4aa6259d05): <https://commits.webkit.org/289290@main> Reviewed commits have been landed. Closing PR #39413 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-01-23 07:41:15 PST
Note You need to log in before you can comment on or make changes to this bug.