Have ""_span be `constexpr` and return a `std::span<const char>` instead of `std::span<const LChar>` https://bugs.webkit.org/show_bug.cgi?id=286388

Reviewed by Darin Adler.

Have ""_span be `constexpr` and return a `std::span<const char>` instead of `std::span<const LChar>`.
One can still get a `std::span<const LChar>` by using ""_span8. One big benefit of ""_span is that
it now can be used to initialize `constexpr` variables since it doesn't require converting into LChar
using `byteCast<>()`.

* Source/JavaScriptCore/API/JSStringRefCF.cpp:
(JSStringCreateWithCFString):
* Source/JavaScriptCore/runtime/Options.cpp:
(JSC::OptionsHelper::Option::dump const):
* Source/JavaScriptCore/wasm/WasmSectionParser.cpp:
(JSC::Wasm::SectionParser::parseCustom):
* Source/WTF/wtf/DateMath.cpp:
(WTF::findMonth):
(WTF::parseDate):
* Source/WTF/wtf/URLParser.cpp:
(WTF::URLParser::parse):
(WTF::URLParser::serializeIPv6):
* Source/WTF/wtf/text/ASCIILiteral.h:
(WTF::StringLiterals::operator_span):
(WTF::StringLiterals::operator_span8):
* Source/WebCore/Modules/mediastream/RTCRtpSFrameTransformerCocoa.cpp:
(WebCore::RTCRtpSFrameTransformer::computeSaltKey):
(WebCore::createBaseSFrameKey):
(WebCore::RTCRtpSFrameTransformer::computeAuthenticationKey):
(WebCore::RTCRtpSFrameTransformer::computeEncryptionKey):
* Source/WebCore/Modules/push-api/PushMessageCrypto.cpp:
(WebCore::PushCrypto::decryptAES128GCMPayload):
(WebCore::PushCrypto::decryptAESGCMPayload):
* Source/WebCore/dom/make_names.pl:
(generateFindNameForLength):
* Source/WebCore/html/track/VTTCue.cpp:
(WebCore::VTTCue::settingName):
* Source/WebCore/html/track/VTTRegion.cpp:
(WebCore::VTTRegion::scanSettingName):
* Source/WebCore/html/track/WebVTTParser.cpp:
(WebCore::WebVTTParser::fileFinished):
(WebCore::WebVTTParser::collectTimingsAndSettings):
* Source/WebCore/loader/TextResourceDecoder.cpp:
(WebCore::findXMLEncoding):
(WebCore::TextResourceDecoder::checkForCSSCharset):
* Source/WebCore/platform/network/DNS.cpp:
(WebCore::IPAddress::isLoopback const):
* Source/WebCore/rendering/RenderQuote.cpp:
(WebCore::subtagCompare):
(WebCore::quotesForLanguage):

Canonical link: https://commits.webkit.org/289290@main