Source/JavaScriptCore/wasm/WasmSectionParser.cpp
@@ -1362,17 +1362,17 @@ auto SectionParser::parseCustom() -> PartialResult
         section.payload[byteNumber] = byte;
     }
 
-    if (WTF::Unicode::equal("name"_span, section.name.span())) {
+    if (WTF::Unicode::equal("name"_span8, section.name.span())) {
         NameSectionParser nameSectionParser(section.payload, m_info);
         auto nameSection = nameSectionParser.parse();
         if (nameSection)
             m_info->nameSection = WTFMove(*nameSection);
         else
             dataLogLnIf(Options::dumpWasmWarnings(), "Could not parse name section: ", nameSection.error());
-    } else if (WTF::Unicode::equal("metadata.code.branch_hint"_span, section.name.span())) {
+    } else if (WTF::Unicode::equal("metadata.code.branch_hint"_span8, section.name.span())) {
         BranchHintsSectionParser branchHintsSectionParser(section.payload, m_info);
         branchHintsSectionParser.parse();
-    } else if (WTF::Unicode::equal("sourceMappingURL"_span, section.name.span())) {
+    } else if (WTF::Unicode::equal("sourceMappingURL"_span8, section.name.span())) {
         SourceMappingURLSectionParser sourceMappingURLSectionParser(section.payload, m_info);
         sourceMappingURLSectionParser.parse();
     }
