Source/WTF/wtf/URLParser.cpp
@@ -1382,7 +1382,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
             if (*c == '/' || *c == '\\') {
                 ++c;
                 copyURLPartsUntil(base, URLPart::SchemeEnd, c, nonUTF8QueryEncoding);
-                appendToASCIIBuffer("://"_span);
+                appendToASCIIBuffer("://"_span8);
                 if (m_urlIsSpecial)
                     state = State::SpecialAuthorityIgnoreSlashes;
                 else {
@@ -1415,7 +1415,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                 }
             } else {
                 syntaxViolation(c);
-                appendToASCIIBuffer("//"_span);
+                appendToASCIIBuffer("//"_span8);
             }
             state = State::SpecialAuthorityIgnoreSlashes;
             break;
@@ -1527,7 +1527,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                     appendToASCIIBuffer('?');
                     ++c;
                 } else {
-                    appendToASCIIBuffer("///?"_span);
+                    appendToASCIIBuffer("///?"_span8);
                     ++c;
                     m_url.m_userStart = currentPosition(c) - 2;
                     m_url.m_userEnd = m_url.m_userStart;
@@ -1549,7 +1549,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                     copyURLPartsUntil(base, URLPart::QueryEnd, c, nonUTF8QueryEncoding);
                     appendToASCIIBuffer('#');
                 } else {
-                    appendToASCIIBuffer("///#"_span);
+                    appendToASCIIBuffer("///#"_span8);
                     m_url.m_userStart = currentPosition(c) - 2;
                     m_url.m_userEnd = m_url.m_userStart;
                     m_url.m_passwordEnd = m_url.m_userStart;
@@ -1571,14 +1571,14 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                     if (base.isValid() && base.protocolIsFile()) {
                         if (base.host().isEmpty()) {
                             copyURLPartsUntil(base, URLPart::SchemeEnd, c, nonUTF8QueryEncoding);
-                            appendToASCIIBuffer(":///"_span);
+                            appendToASCIIBuffer(":///"_span8);
                         } else {
                             copyURLPartsUntil(base, URLPart::PortEnd, c, nonUTF8QueryEncoding);
                             appendToASCIIBuffer('/');
                             copiedHost = true;
                         }
                     } else
-                        appendToASCIIBuffer("///"_span);
+                        appendToASCIIBuffer("///"_span8);
                     if (!copiedHost) {
                         m_url.m_userStart = currentPosition(c) - 1;
                         m_url.m_userEnd = m_url.m_userStart;
@@ -1601,7 +1601,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                     syntaxViolation(c);
                 if (base.isValid() && base.protocolIsFile()) {
                     copyURLPartsUntil(base, URLPart::SchemeEnd, c, nonUTF8QueryEncoding);
-                    appendToASCIIBuffer(":/"_span);
+                    appendToASCIIBuffer(":/"_span8);
                 }
                 appendToASCIIBuffer('/');
                 advance(c);
@@ -1619,7 +1619,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                 if (base.isValid() && base.protocolIsFile()) {
                     if (base.host().isEmpty()) {
                         copyURLPartsUntil(base, URLPart::SchemeEnd, c, nonUTF8QueryEncoding);
-                        appendToASCIIBuffer(":///"_span);
+                        appendToASCIIBuffer(":///"_span8);
                     } else {
                         copyURLPartsUntil(base, URLPart::PortEnd, c, nonUTF8QueryEncoding);
                         appendToASCIIBuffer('/');
@@ -1627,7 +1627,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                     }
                 } else {
                     syntaxViolation(c);
-                    appendToASCIIBuffer("//"_span);
+                    appendToASCIIBuffer("//"_span8);
                 }
                 if (!copiedHost) {
                     m_url.m_userStart = currentPosition(c) - 1;
@@ -1662,7 +1662,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                         ASSERT(windowsQuirk || parsedDataView(currentPosition(c) - 1) == '/');
                         if (UNLIKELY(*c == '?')) {
                             syntaxViolation(c);
-                            appendToASCIIBuffer("/?"_span);
+                            appendToASCIIBuffer("/?"_span8);
                             ++c;
                             if (nonUTF8QueryEncoding) {
                                 queryBegin = c;
@@ -1675,7 +1675,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
                         }
                         if (UNLIKELY(*c == '#')) {
                             syntaxViolation(c);
-                            appendToASCIIBuffer("/#"_span);
+                            appendToASCIIBuffer("/#"_span8);
                             ++c;
                             m_url.m_pathAfterLastSlash = currentPosition(c) - 1;
                             m_url.m_pathEnd = m_url.m_pathAfterLastSlash;
@@ -1915,7 +1915,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
             break;
         }
         syntaxViolation(c);
-        appendToASCIIBuffer("///"_span);
+        appendToASCIIBuffer("///"_span8);
         m_url.m_userStart = currentPosition(c) - 1;
         m_url.m_userEnd = m_url.m_userStart;
         m_url.m_passwordEnd = m_url.m_userStart;
@@ -1933,7 +1933,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
             if (base.isValid() && base.protocolIsFile()) {
                 if (base.host().isEmpty()) {
                     copyURLPartsUntil(base, URLPart::SchemeEnd, c, nonUTF8QueryEncoding);
-                    appendToASCIIBuffer(":/"_span);
+                    appendToASCIIBuffer(":/"_span8);
                 } else {
                     copyURLPartsUntil(base, URLPart::PortEnd, c, nonUTF8QueryEncoding);
                     appendToASCIIBuffer('/');
@@ -1942,7 +1942,7 @@ void URLParser::parse(std::span<const CharacterType> input, const URL& base, con
             }
             if (!copiedHost) {
                 m_url.m_userStart = currentPosition(c) + 1;
-                appendToASCIIBuffer("//"_span);
+                appendToASCIIBuffer("//"_span8);
                 m_url.m_userEnd = m_url.m_userStart;
                 m_url.m_passwordEnd = m_url.m_userStart;
                 m_url.m_hostEnd = m_url.m_userStart;
@@ -2159,7 +2159,7 @@ void URLParser::serializeIPv6(URLParser::IPv6Address address)
             if (piece)
                 appendToASCIIBuffer(':');
             else
-                appendToASCIIBuffer("::"_span);
+                appendToASCIIBuffer("::"_span8);
             while (piece < 8 && !address[piece])
                 piece++;
             if (piece == 8)
