Source/WebCore/loader/TextResourceDecoder.cpp
@@ -339,7 +339,7 @@ bool TextResourceDecoder::hasEqualEncodingForCharset(const String& charset) cons
 // Returns the position of the encoding string.
 static size_t findXMLEncoding(std::span<const uint8_t> string, size_t& encodingLength)
 {
-    size_t position = find(string, "encoding"_span);
+    size_t position = find(string, "encoding"_span8);
     if (position == notFound)
         return notFound;
     position += 8;
@@ -436,7 +436,7 @@ bool TextResourceDecoder::checkForCSSCharset(std::span<const uint8_t> data, bool
 
     data = m_buffer.span();
 
-    if (skipCharactersExactly(data, "@charset \""_span)) {
+    if (skipCharactersExactly(data, "@charset \""_span8)) {
         size_t index = 0;
         while (index < data.size() && data[index] != '"')
             ++index;
